[package]
name = "stylus-example"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "=0.8.20", default-features = false }
alloy-sol-types = { version = "=0.8.20", default-features = false }
stylus-sdk = { version = "=0.8.3", default-features = false, features = ["mini-alloc"] }
openzeppelin-stylus = "=0.1.1"

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]